siberian_ctypes.py


    @staticmethod
    def loadImage(name: str) -> sTexture:
        tex = sTexture()
        result = _siberian.sTextureLoadDDS(tex, name.encode())
        if result == 1:
            raise FileNotFoundError("File {} not found".format(name))
        elif result == 2:
            raise TypeError("File {} is not a DDS file".format(name))
        return tex
    
    @staticmethod
    def loadWithCompression(name: str) -> sTexture:
        tex = sTexture()
        textureData = check_output("nvcompress -bc3 -fast -stdout \"{}\"".format(name), shell=True)
        result = _siberian.sTextureLoadDDSFromString(tex, textureData)
        if result==1:
            raise IOError("Unknown DDS format")
        if result==2:
            print(textureData)
            raise IOError("Input stream isn't a DDS")
        return tex

    @property
    def name(self) -> str:
        return self._name.decode()

    @property
    def size(self) -> Tuple[int, int]:
        return int(getattr(self, "__width")), int(getattr(self, "__height"))

    @property
    def width(self) -> int:
        return int(getattr(self, "__width"))

    @property
    def height(self) -> int:
        return int(getattr(self, "__height"))

    def delete(self) -> None:
        _siberian.sTextureFree(self)
        try:
            del sTexture.__instances__[addressof(self)]
        except:
            pass

sTexture_p = POINTER(sTexture)

_siberian.sTextureFree.argtypes = (sTexture_p,)
_siberian.sTextureFree.restype = None

_siberian.sTextureLoadCubemap.argtypes = (sTexture_p, c_char_p)
_siberian.sTextureLoadCubemap.restype = c_int

_siberian.sTextureLoadDDS.argtypes = (sTexture_p, c_char_p)
_siberian.sTextureLoadDDS.restype = c_int

_siberian.sTextureLoadDDSFromString.argtypes = (sTexture_p, c_char_p)
_siberian.sTextureLoadDDSFromString.restype = c_int

class sShader(Structure):
    _fields_ = \
        [('name',  char*256),
         ('_fragment_source', c_char_p),
            ('_vertex_source', c_char_p),
         ('_log_len', GLsizei),
            ('_frag_source_len', GLsizei),
            ('_vert_source_len', GLsizei),
            ('_success', GLint),
            ('_compute', GLint),
            ('_fragment', GLint),
            ('_vertex', GLint),
            ('_program', GLint),
            ('_log', GLint),

            ('_fp', c_void_p)]


class sMaterial(Structure):
    _fields_ = \
        [("_hash",  uint32_t),
         ('_name',  char*256),
            ('friction', double),
            ('transparency', c_float),
            ('glass', c_bool),
            ('height_scale', c_float),
            ('diffuse', c_float*4),
            ('specular', c_float*4),
            ('_diffuse_texture', POINTER(sTexture)),
            ('_specular_texture', POINTER(sTexture)),
            ('_height_texture', POINTER(sTexture)),
            ('_lightmap_texture', POINTER(sTexture)),
            ('_reflection_cubemap', POINTER(sTexture)),
            ('tdx', c_float),
            ('tdy', c_float),
            ('glow', c_float),
            ('wet', c_float),
            ('_shader', uint32_t)]

    @property
    def name(self) -> str:
        return self._name.decode()


class sMesh(Structure):
    _fields_ = \
        [("_hash",  uint32_t),
         ('name',  char*256),
            ('_link_matrix', POINTER(laType)),
            ('_vertices', POINTER(c_float*16)),
            ('_indices', POINTER(index_t)),
            ('_ind_count', uint32_t),
            ('_vert_count', uint32_t),
            ('_material', POINTER(sMaterial)),
            ('_VBO', uint32_t),
            ('_IBO', uint32_t),
            ('_uniforms', uint32_t*4),
            ('_transform', laType),
            ('_bounding_box', laType),
            ('_deformed', c_bool),
            ('_bones_indices', uint16_t*128),
            ('_uv2', c_bool),
            ('_owner', void)]

    @property
    def name(self) -> str:
        return self._name.decode()

    @property
    def material(self) -> sMaterial:
        if self._material:
            return self._material.contents
        elif not self._material:
            return None
        else:
            return None

    def setMaterial(self, scene : sScene, name):
        if isinstance(name, str):
            _siberian.sMeshSetMaterial(self, scene, name.encode())
        elif isinstance(name, bytes):
            _siberian.sMeshSetMaterial(self, scene, name)

    def getOwner(self) -> sObject:
        return cast(self._owner, sObject_p).contents


class sPhysicsContact(Structure):
    _fields_ = \
        [('_object', c_void_p),
         ('_position', dReal*3),
            ('_normal', dReal*3)]

    @property
    def hitObject(self) -> sObject:
        return cast(self._object, sObject_p).contents

    @property
    def hitPosition(self) -> laType:
        return Vector(self._position[0], self._position[1], self._position[2])

    @property
    def hitNormal(self) -> laType:
        return Vector(self._normal[0], self._normal[1], self._normal[2])


class sPhysicsCS(Structure):
    _fields_ = \
        [('__space', dSpaceID),
         ('_contacts', POINTER(sPhysicsContact)),
            ('_contactsCount', index_t),
         ('_contactsAllocated', index_t), ]

    _read_only = ['contacts', ]

    @property
    def contacts(self) -> Sequence[sPhysicsContact]:
        return [self._contacts[i].contents for i in range(self._contactsCount)]


class sPhysicsRS(Structure):
    _fields_ = \
        [('__space', dSpaceID),
         ('_contacts', POINTER(sPhysicsContact)),
            ('_contactsCount', index_t),
            ('_contactsAllocated', index_t),
            ('_angle', dReal),
            ('_range', dReal),
            ('_dir', sRayDir),
            ('_radar_mesh', dGeomID)]

    _read_only = ['contacts', ]

    @property
    def angle(self) -> float:
        return float(self._angle)

    @angle.setter
    def angle(self, val):
        val = c_float(val)
        _siberian.sPhysicsRadarSetAngle(self, val)

    @property
    def range(self) -> float:
        return float(self._range)

    @range.setter
    def range(self, Range):
        _siberian.sPhysicsRSSetRange(self, Range)

    @property
    def contacts(self) -> Sequence[sPhysicsContact]:
        return [self._contacts[i].contents for i in range(self._contactsCount)]

    @property
    def contactsCount(self) -> int:
        return int(self._contactsCount)

    @property
    def dir(self):
        return self._dir

    @dir.setter
    def dir(self, value):
        if value in range(8):
            self._dir = value
        else:
            raise ValueError('Invalid direction value')


class sObjectBase(Structure):
    _fields_ = \
        [("__hash",  uint32_t),
         ('_name',  char*256),
            ('_child_count', index_t),
            ('_parent', c_void_p),
            ('_children', POINTER(c_void_p)),
            ('_scene', c_void_p),
            ('_behaviour', behaviour),
            #('_pyBehaviour', py_object),
            #('_pyobj', py_object_p),
         ('_transform', laType),
         ('transform_global', laType),
         ('transform_global_previous', laType),
         ('_transformable', c_bool),
         ('inactive', c_bool),
         ('_hidden', c_bool),
         ('__data', c_void_p)]


class sObject(Structure):
    _fields_ = sObjectBase._fields_[:]
    _fields_.extend([
        ('_skeleton', POINTER(c_void_p)),
        ('_mesh', POINTER(sMesh)),
        ('__body', dBodyID),
        ('__bodyIgnoring', dBodyID),
        ('_geom', dGeomID),
        ('_radar', sPhysicsRS),
        ('_ray', sPhysicsRS),
        ('_collider', sPhysicsCS),
        ('__ghost', c_int),
        ('__enabled', c_int),
        ('_physicsType', uint32_t),
        ('_physicsShape', uint32_t),
        ('_collisionGroups', uint32_t),
        ('_collideWithGroups', uint32_t),
        ('_physicsFriction', dReal),
        ('_physicsMass', dReal),
        ('_averangeVel', dReal)])

    _sensors = ('radar', 'ray', 'collider')
    _types = {'o': 'sObject', 'c': 'sCamera',
              'l': 'sLight', 'b': 'sBone', 's': 'sSkeleton'}
    _types[ord('o')] = 'sObject'
    _types[ord('c')] = 'sCamera'
    _types[ord('l')] = 'sLight'
    _types[ord('b')] = 'sBone'
    _types[ord('s')] = 'sSkeleton'
    _read_only = ['radar', 'ray', 'collider', 'mass']
    __properties = {}

    def __getitem__(self, key):
        return self.attributes[key]

    def __setitem__(self, key, value):
        self.attributes[key] = value

    def placeChildren(self):
        _siberian.sObjectPlaceChildren(self)

    @property
    def skeleton(self) -> sObject:
        if self._skeleton:
            return cast(self._skeleton, sObject_p).contents
        else:
            None

    def setIgnoredObject(self, obj: sObject):
        setattr(self, '__bodyIgnoring', getattr(obj, '__body'))
    # @skeleton.setter
    # def skeleton(self,obj):
        # if isinstance(obj,sObject) and (obj.name[0]=='s' or obj.name[0]==ord('s')):
        #obj = cast(pointer(obj),c_void_p)
        # else:
        #raise AttributeError('Invalid type for skeleton attribute')

    def actionProcess(self):
        if self._name[0] == ord('s') or self._name[0] == b's':
            _siberian.sActionProcess(self)
        else:
            raise AttributeError('{} has no attribute actionProcess'.format(
                sObject._types[self._name[0]]))

    @property
    def animatedFlag(self) -> bool:
        return bool(sBoneGetAnimatedFlag(self))

    @animatedFlag.setter
    def animatedFlag(self, flag: bool):
        sBoneSetAnimatedFlag(self, flag)

    @property
    def parent(self) -> sObject:
        if self._parent:
            return cast(self._object, sObject_p).contents
        else:
            None

    @property
    def attributes(self):
        props = self.scene.pydata
        if not addressof(self) in list(props.keys()):
            props[addressof(self)] = {}
        return props[addressof(self)]

    @attributes.setter
    def attributes(self, val: dict):
        props = self.scene.pydata
        if type(val) == dict or hasattr(val, '__getitem__'):
            props[addressof(self)] = copy(val)
        else:
            raise AttributeError('Invalid type for attributes array')

    @property
    def mesh(self) -> sMesh:
        if (self._name[0] == ord('o') or self._name[0] == b'o') and self._mesh:
            return self._mesh.contents
        elif not self._mesh:
            return None
        else:
            raise AttributeError('{} has no attribute mesh'.format(
                sObject._types[self._name[0]]))

    @mesh.setter
    def mesh(self, value):
        if isinstance(value, sMesh):
            self._mesh = pointer(value)
        elif isinstance(value, POINTER(sMesh)):
            self._mesh = value
        elif isinstance(value, str):
            sObjectSetMeshByName(self, value)
        else:
            raise TypeError(
                'Wrong type (%s). Expexted sMesh or string (name of mesh)' % (str(type(value))))

    @property
    def radar(self) -> sPhysicsRS:
        if self._name[0] == ord('o') or self._name[0] == b'o':
            return self._radar
        else:
            raise AttributeError(
                '{} has no physics/sensor controllers'.format(sObject._types[self._name[0]]))

    @property
    def ray(self) -> sPhysicsRS:
        if self._name[0] == ord('o') or self._name[0] == b'o':
            return self._ray
        else:
            raise AttributeError(
                '{} has no physics/sensor controllers'.format(sObject._types[self._name[0]]))

    @property
    def collider(self) -> sPhysicsCS:
        if self._name[0] == ord('o') or self._name[0] == b'o':
            return self._collider
        else:
            raise AttributeError(
                '{} has no physics/sensor controllers'.format(sObject._types[self._name[0]]))

    @property
    def name(self) -> str:
        return self._name.decode()
